--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
-# Python
+# Python cache
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
 
-# venvs
+# Virtual environments
 .venv/
 venv/
 
-# Editor / OS
+# Editor/OS files
 .vscode/
 .idea/
 .DS_Store
 
-# Env files
+# Environment files
 .env
